//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  fullName String [not null]
  email String [unique, not null]
  password String [not null]
  avatarUrl String
  courses Course [not null]
  wishlist Course [not null]
  createdCourses Course [not null]
  Rating Rating [not null]
  roles Role[] [not null]
  cartCourses Course [not null]
  appliedCoupon String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Course {
  id String [pk]
  title String [not null]
  bio String [not null]
  description String [not null]
  requirements String [not null]
  forWho String [not null]
  price Float [not null]
  languages String[] [not null]
  level String [not null]
  skills String[] [not null]
  categories Category [not null]
  duration String
  imageUrl String [not null]
  previewUrl String [not null]
  discount Int [default: 0]
  discountStart DateTime
  discountEnd DateTime
  discountCodes String[] [not null]
  author User
  authorId String
  students User [not null]
  inCart User [not null]
  ratings Rating [not null]
  courseContents CourseContent [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  User User
  userId String
}

Table Category {
  id String [pk]
  name String [not null]
  subCategory Category [not null]
  parent Category
  parentId String
  Course Course
  courseId String
}

Table Rating {
  id String [pk]
  user User [not null]
  userId String [not null]
  course Course
  courseId String
  rating Int [not null, default: 0]
  content String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table CourseContent {
  id String [pk]
  course Course
  courseId String
  lectures Lecture [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Lecture {
  id String [pk]
  courseId String
  title String [not null]
  content LectureContent [not null]
  estimatedTime String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  CourseContent CourseContent
  courseContentId String
}

Table LectureContent {
  id String [pk]
  title String
  previewUrl String
  time String
  content String
  Lecture Lecture
  lectureId String
}

Table UserPurchasedCourse {
  coursesId String [ref: > Course.id]
  studentsId String [ref: > User.id]
}

Table UserCartCourse {
  cartcoursesId String [ref: > Course.id]
  incartId String [ref: > User.id]
}

Enum Role {
  ADMIN
  USER
}

Enum CourseStatus {
  PUBLISHED
  DRAFT
  PENDING
  REJECTED
}

Enum CourseType {
  FREE
  PAID
}

Enum CourseLevel {
  BEGINNER
  INTERMEDIATE
  ADVANCED
}

Ref: Course.authorId > User.id

Ref: Course.userId > User.id

Ref: Category.parentId > Category.id

Ref: Category.courseId > Course.id

Ref: Rating.userId > User.id

Ref: Rating.courseId > Course.id

Ref: CourseContent.courseId > Course.id

Ref: Lecture.courseContentId > CourseContent.id

Ref: LectureContent.lectureId > Lecture.id